kubernetes/ocp-gpu/applications/inference-server/anythingllm/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: anythingllm-inference-server
  labels:
    app: anythingllm-inference-server
    app.kubernetes.io/component: anythingllm
    app.kubernetes.io/instance: inference-server
    app.kubernetes.io/name: anythingllm
    app.kubernetes.io/part-of: anythingllm
    backend: inference-server
spec:
  ports:
    - name: 8888-tcp
      protocol: TCP
      port: 8888
      targetPort: 8888
  internalTrafficPolicy: Cluster
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: anythingllm-inference-server
    deployment: anythingllm-inference-server
